# UnetEmu

./: .gitignore  create_model.py  loader.py  losses.py  main.py  nn.py  params.py  unet.py
fforge/: README.md  params.py  pyproject.toml
fforge/data/data/: parahist.csv
fforge/evaluation/: Evaluation_cmaps_var.ipynb  MAIN_cmaps_varp.ipynb  cmaps_eval_testsingle.ipynb  evaluation_lib.py  genCMAP_fromsimulations.py  generate_varp_cmaps_cube.py  generate_varpar_curves_cmaps.py  mse_varp_testset_cmaps_hd163296_corr3_n.npz  parfile_hd163296.json  pca.ipynb
fforge/evaluation/.ipynb_checkpoints/: Evaluation_cmaps_var-checkpoint.ipynb  MAIN_cmaps_varp-checkpoint.ipynb  cmaps_eval_testsingle-checkpoint.ipynb  evaluation_lib-checkpoint.py  gen_cmaps_emu-checkpoint.py  gen_var_cmaps-checkpoint.py  generate_varp_cmaps_cube-checkpoint.py  generate_varpar_curves-checkpoint.py  generate_varpar_curves_cmaps-checkpoint.py  get_hd163296_refmodel-checkpoint.py
fforge/evaluation/backup/: MAIN_cmaps_varp.ipynb
fforge/evaluation/cmap_analysis/: emulate_cmaps.py  single_cases.ipynb
fforge/mcmc_fit/: custom_likelihood.py  fitting_script_copyme.py
fforge/mcmc_fit/prepare_data/: grid_extent.json  parfile.par  prepare_cube.ipynb
fforge/mcmc_fit/test1/: Untitled.ipynb  allp_fit_2.py  check_results.ipynb  debug.ipynb  load_model.py  parfile_hd163296.json
fforge/mcmc_fit/test1_fittingunc/: allp_fit_2.py  fforge_dm_model.py  grid_extent.json
fforge/notebooks/: hydro_emu.ipynb
fforge/notebooks/discminer_integration/: lower_R.npy  (+8 more)
fforge/scripts/: .emulate_batch.py.swp  train.py
(+66 files in other folders)
