[tool.poetry]
name = "fforge"
version = "0.1.0"
description = "A package for UNet emulation."
authors = ["Alessandro Ruzza <alessandro.ruzza@unimi.it>"]
license = "MIT"
readme = "README.md"
keywords = ["unet", "emulation", "machine learning"]

[tool.poetry.dependencies]


[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"